# openapi.yaml
@@ -1,6 +1,6 @@
 openapi: "3.0.0"
 info:
-  version: 8.0.1
+  version: 9.0.0
   title: Jeera Project Manager
   license:
     name: MIT
@@ -326,6 +326,10 @@ paths:
                 status: '$response.body#/status'
                 tags: '$response.body#/tags'
                 priority: '$response.body#/priority'
+            reverseArchivedState:
+              operationId: reverseTaskArchivedState
+              parameters:
+                taskId: '$response.body#/id'
             delete:
               operationId: deleteTask
               parameters:
@@ -397,6 +401,10 @@ paths:
                 status: '$response.body#/status'
                 tags: '$response.body#/tags'
                 priority: '$response.body#/priority'
+            reverseArchivedState:
+              operationId: reverseTaskArchivedState
+              parameters:
+                taskId: '$response.body#/id'
             delete:
               operationId: deleteTask
               parameters:
@@ -414,6 +422,72 @@ paths:
                 projectId: '$response.body#/parentProjectId'
             analytics:
               operationId: getAnalytics
+              parameters:
+                resourceId: '$response.body#/id'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+      security: 
+        - bearerToken: []
+  /task/{taskId}/archive:
+    post:
+      description: Reverse the archived status of a task
+      operationId: reverseTaskArchivedState
+      tags:
+        - tasks
+      parameters: 
+        - name: taskId
+          in: path
+          description: Id of the task to archive
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isArchived:
+                    type: boolean
+                required: [ isArchived ]
+          links:
+            update:
+              operationId: updateTask
+              parameters:
+                taskId: '$response.body#/id'
+                id: '$response.body#/id'
+                title: '$response.body#/title'
+                description: '$response.body#/details/description'
+                assignee: '$response.body#/details/assignee'
+                points: '$response.body#/points'
+                status: '$response.body#/details/status'
+                tags: '$response.body#/details/tags'
+                priority: '$response.body#/details/priority'
+            reverseArchivedState:
+              operationId: reverseTaskArchivedState
+              parameters:
+                taskId: '$response.body#/id'
+            delete:
+              operationId: deleteTask
+              parameters:
+                taskId: '$response.body#/id'
+            moveToQA:
+              operationId: toQATask
+              parameters:
+                taskId: '$response.body#/id'
+            complete:
+              operationId: completeTask
+              parameters:
+                taskId: '$response.body#/id'
+            analytics:
+              operationId: getAnalytics
+              x-@relation: vnd_jeera:rel/analytics
               parameters:
                 resourceId: '$response.body#/id'
         default:
@@ -467,37 +541,25 @@ paths:
                 $ref: "#/components/schemas/Error"
       security: 
         - bearerToken: []
-  # to merge with unarchive
   /project/{projectId}/archive:
-    put:
+    post:
       description: Archive a project
-      operationId: archiveProject
+      operationId: switchProjectArchiveState
       tags:
         - projects
       parameters: 
         - $ref: '#/components/parameters/projectId'
       responses:
-        '204':
+        '200':
           description: Success
-        default:
-          description: unexpected error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Error"
-      security: 
-        - bearerToken: []
-  /project/{projectId}/unarchive:
-    put:
-      description: Unarchive a project
-      operationId: unarchiveProject
-      tags:
-        - projects
-      parameters:
-        - $ref: '#/components/parameters/projectId'
-      responses:
-        '204':
-          description: Success
+                type: object
+                properties:
+                  isArchived:
+                    type: boolean
+                  required: [ isArchived ]
         default:
           description: unexpected error
           content:
@@ -611,6 +673,10 @@ paths:
                 status: '$response.body#/status'
                 tags: '$response.body#/tags'
                 priority: '$response.body#/priority'
+            reverseArchivedState:
+              operationId: reverseTaskArchivedState
+              parameters:
+                taskId: '$response.body#/id'
             delete:
               operationId: deleteTask
               parameters:
@@ -676,6 +742,10 @@ paths:
                 status: '$response.body#/status'
                 tags: '$response.body#/tags'
                 priority: '$response.body#/priority'
+            reverseArchivedState:
+              operationId: reverseTaskArchivedState
+              parameters:
+                taskId: '$response.body#/id'
             delete:
               operationId: deleteTask
               parameters:
@@ -725,6 +795,10 @@ paths:
                 status: '$response.body#/status'
                 tags: '$response.body#/tags'
                 priority: '$response.body#/priority'
+            reverseArchivedState:
+              operationId: reverseTaskArchivedState
+              parameters:
+                taskId: '$response.body#/id'
             complete:
               operationId: toDoneTask
               parameters:
@@ -762,6 +836,10 @@ paths:
                 status: '$response.body#/status'
                 tags: '$response.body#/tags'
                 priority: '$response.body#/priority'
+            reverseArchivedState:
+              operationId: reverseTaskArchivedState
+              parameters:
+                taskId: '$response.body#/id'
             moveToQA:
               operationId: toQATask
               parameters:
@@ -780,6 +858,8 @@ paths:
     get:
       description: Get analytics on a resource
       operationId: getAnalytics
+      security: 
+        - bearerToken: []
       tags:
         - analytics
       responses:
@@ -827,12 +907,8 @@ components:
           operationId: listTasks
           parameters:
             queryProjectId: '$response.body#/id'
-        archive:
-          operationId: archiveProject
-          parameters:
-            projectId: '$response.body#/id'
-        unarchive:
-          operationId: unarchiveProject
+        reverseArchivedState:
+          operationId: switchProjectArchiveState
           parameters:
             projectId: '$response.body#/id'
         delete:
@@ -1049,8 +1125,10 @@ components:
           items:
             type: string
         priority:
-          $ref: '#/components/schemas/Priority'        
-      required: [ id, title, parentProjectId, description, assignee, status ]
+          $ref: '#/components/schemas/Priority'
+        isArchived:
+          type: boolean       
+      required: [ id, title, parentProjectId, description, assignee, status, isArchived ]
     UserStoryCreationRequest:
       type: object
       properties:
@@ -1130,9 +1208,9 @@ components:
             type: string
         priority:
           $ref: '#/components/schemas/Priority'
-        updatesCount:
-          type: integer
-      required: [ id, title, points, parentProjectId, description, assignee, lastUpdate, status, updatesCount ]
+        isArchived:
+          type: boolean
+      required: [ id, title, points, parentProjectId, description, assignee, status, isArchived ]
     Task:
       oneOf:
         - $ref: '#/components/schemas/TechnicalStory'
