# servers/node/src/controllers/analytic-controller.js
@@ -29,13 +29,22 @@ const analyticController = function(analyticService, projectService, taskService
 }
 
 function resolveResourceUri(resourceId, userId, projectService, taskService) {
+  const project = notFoundExceptionToUndefined(
+    () => projectService.findById(resourceId, userId)
+  )
+
+  if (project) return ReverseRouter.forProject(resourceId)
+
+  const task = taskService.findById(resourceId)
+  if (task) return ReverseRouter.forTask(resourceId, task.projectId)
+}
+
+function notFoundExceptionToUndefined(f) {
   try {
-    const project = projectService.findById(resourceId, userId)
-    if (project) return ReverseRouter.forProject(resourceId)
+     return f()
   } catch (error) {
     if (error instanceof Errors.NotFound) {
-      const task = taskService.findById(resourceId)
-      if (task) return ReverseRouter.forTask(resourceId, task.projectId)
+      return undefined
     } else {
       throw error
     }
