# servers/node/src/controllers/task-controller.js
@@ -19,6 +19,7 @@ function taskWithHypermediaControls(task) {
     .link(HypermediaControls.moveToQa(task), task.status !== TaskStatus.qa)
     .link(HypermediaControls.complete(task), task.status === TaskStatus.qa)
     .link(HypermediaControls.analytics(task))
+    .link(HypermediaControls.reverseArchivedState(task))
     .build();
 }
 
@@ -151,6 +152,14 @@ const taskController = function(projectService, taskService) {
       const taskId = req.params.taskId;
       taskService.updateStatus(taskId, TaskStatus.complete);
       Responses.noContent(res);
+    }, res);
+  }));
+
+  router.post(`/task/:taskId/archive`, AuthService.withAuth((req, res) => {
+    Errors.handleErrorsGlobally(() => {
+      const taskId = req.params.taskId;
+      const newArchivedState = taskService.switchArchivedStatus(taskId);
+      Responses.ok(res, { isArchived: newArchivedState });
     }, res);
   }));
 
